--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -1,2 +1,19 @@
-<h1>Categories#index</h1>
-<p>Find me in app/views/categories/index.html.erb</p>
+<div>
+  <section>   
+    <%= button_to "Exit", destroy_user_session_path, method: :delete %>  
+    <h5>CATEGORIES</h5> 
+  </section>
+  <p><%= notice %></p>
+  <div>
+    <% @categories.each do |category| %>
+      <%= link_to category  do %>
+        <%= render category %>
+      <% end %>
+    <% end %>
+  </div>
+  <div>
+    <%= link_to "New Category", new_category_path %>
+  </div>
+</div>
+
+
