--- a/app/views/categories/edit.html.erb
+++ b/app/views/categories/edit.html.erb
@@ -1,4 +1,4 @@
-<h1>Editing category</h1>
+<h1 class="text-center p-4 font-semibold">Editing category</h1>
 <%= render "form", category: @category %>
 <br>
 <div>
