--- a/app/views/categories/_category.html.erb
+++ b/app/views/categories/_category.html.erb
@@ -1,4 +1,4 @@
-<div id="<%= dom_id category %>" >
+<div id="<%= dom_id category %>" class="flex justify-between items-center m-3 p-3 bg-white text-terciary">
   <h5><%= category.name %></h5>
-  <h5>$<%= category.transactions.map {|transaction| transaction.amount}.sum %></h5>
+  <h5 >$<%= category.transactions.map {|transaction| transaction.amount}.sum %></h5>
 </div>
