--- a/app/views/categories/_form.html.erb
+++ b/app/views/categories/_form.html.erb
@@ -9,13 +9,15 @@
       </ul>
     </div>
   <% end %>
-  <div>
-    <div>
-      <%= form.text_field :name, autocomplete: "name", autofocus: true, placeholder: "Name", required: true %>
-      <label for="floating_name">Name</label>
-    </div> 
-    <div>
-      <%= form.submit "Submit" %>
+
+  <div class="container mx-auto bg-white px-3 py-2">
+    <div class="relative z-0 w-full my-2 group">
+      <%= form.text_field :name, autocomplete: "name", autofocus: true, class: "block py-2.5 px-0 w-full text-sm text-gray-900 bg-transparent border-0 border-b-2 border-gray-300 appearance-none dark:text-white dark:border-gray-600 dark:focus:border-blue-500 focus:outline-none focus:ring-0 focus:border-blue-600 peer", placeholder: "Name", required: true %>
+      <label for="floating_name" class="peer-focus:font-medium absolute text-sm text-gray-500 dark:text-gray-400 duration-300 transform -translate-y-6 scale-75 top-3 -z-10 origin-[0] peer-focus:left-0 peer-focus:text-blue-600 peer-focus:dark:text-blue-500 peer-placeholder-shown peer-focus:scale-75 peer-focus:-translate-y-6">Name</label>
+    </div>  
+    <div class="text-gray-200 font-light text-center my-2 w-full">
+      <%= form.submit "Submit", class: "bg-purple-700 hover:bg-pink-400 block py-3 px-4 rounded" %>
     </div>
   </div>
 <% end %>
+
