--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -1,9 +1,11 @@
-<div>
-  <section>   
-    <%= button_to "Exit", destroy_user_session_path, method: :delete %>  
-    <h5>CATEGORIES</h5> 
+<div class="flex flex-col justify-between min-h-screen">
+  <section class="container mx-auto flex justify-start items-left bg-pink-800 text-white font-light px-3 py-4 rounded-md">
+    <i class="fa-solid fa-bars fa-xl md:hidden" id="hamburger-btn"></i> 
+    <%= button_to "Exit", destroy_user_session_path, method: :delete, class:"uppercase hidden md:block" %>  
+    <h5 class="font-light grow text-center">CATEGORIES</h5> 
   </section>
-  <p><%= notice %></p>
+    <p ss="text-green-500 px-3"><%= notice %></p>
+  <div id="categories" class="grow">
   <div>
     <% @total_amount = 0 %>
     <% @categories.each do |category| %>
@@ -12,10 +14,14 @@
         <% @total_amount += category.transactions.map {|transaction| transaction.amount}.sum %>        
       <% end %>
     <% end %>
-     <h5>Total for all categories: $<%= @total_amount %></h5>
+     <h5 class="m-3 p-3 bg-white text-terciary text-center text-2xl">Total for all categories: $<%= @total_amount %></h5>
   </div>
-  <div>
-    <%= link_to "New Category", new_category_path %>
+  <div class="bg-success p-1 text-center text-3xl text-white font-light rounded-md">
+    <%= link_to "New Category", new_category_path, class: "border border-white hover:opacity-50 block p-4 rounded-md" %>
+  </div>
+
+  <div class="bg-green-700 p-1 text-center text-3xl text-white font-light rounded-md">
+    <%= link_to "New Transaction", new_transaction_path, class: "border border-white hover:opacity-50 block p-4 rounded-md" %>
   </div>
 </div>
 
