--- a/app/views/categories/new.html.erb
+++ b/app/views/categories/new.html.erb
@@ -1,8 +1,9 @@
 <div class="flex flex-col">
-  <div>
-    <%= link_to categories_path do %>      
+  <div class="container mx-auto flex justify-start items-center bg-pink-800 text-white font-light px-3 py-4">
+    <%= link_to categories_path do %>
+      <i class="fa-solid fa-arrow-left fa-xl "></i>
     <% end %>
-    <h5>NEW CATEGORY</h5>
+    <h5 class="font-light grow text-center">NEW CATEGORY</h5>
   </div>
   <%= render "form", category: @category %>
 </div>
