--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -1,13 +1,15 @@
-<div>
-  <div>
-    <%= link_to categories_path do %>Link to categories     
+<div class="flex flex-col justify-between min-h-screen">
+  <div class="container mx-auto flex justify-start items-center bg-pink-800 text-white font-light px-3 py-4 rounded-md">
+    <%= link_to categories_path do %>
+      <i class="fa-solid fa-arrow-left fa-xl "></i>   
     <% end %>
-    <h5>PAYMENTS PER <strong> <%= @category.name.upcase %> </strong> CATEGORY </h5>
+    <h5 class="font-light grow text-center">PAYMENTS PER <strong> <%= @category.name.upcase %> </strong> CATEGORY </h5>
   </div>
-  <p><%= notice %></p>  
-  <div>
+   <p class="text-green-500 p-3"><%= notice %></p>
+  
+  <div class="grow">
     <% @transactions.each do |transaction| %>
-      <div>
+      <div class="flex justify-between items-center m-3 p-3 bg-white text-terciary">
         <div>
           <h5><%= transaction.name %></h5>
           <h5><%= transaction.created_at.strftime("%Y-%m-%d") %></h5>
@@ -15,15 +17,20 @@
         <h5>$<%= transaction.amount %></h5>
       </div>
     <% end %>
-    <h5>Total for <%= @category.name %>  $<%= @category.transactions.map {|transaction| transaction.amount}.sum %></h5> 
+    <h5 class="m-3 p-3 bg-white text-terciary text-center text-2xl">Total for <%= @category.name %>  $<%= @category.transactions.map {|transaction| transaction.amount}.sum %></h5> 
   </div>
-  <div>
-    <%= link_to "New Transaction", new_transaction_path %>
+   <div class="bg-success p-1 text-center text-3xl text-white font-light rounded-md">
+    <%= link_to "New Transaction", new_transaction_path, class: "border border-white hover:opacity-50 block p-4 rounded-md" %>
   </div>
-  <div>
-  <%= link_to "All transactions", transactions_path %>
+  <div class="text-purple-900 font-semibold">
+  <%= link_to "Show all transactions", transactions_path, class: "bg-white px-1" %>
   </div>
-  <div>
-  <%= button_to "Destroy this category", @category, method: :delete %>
+   <div class="text-indigo-600 font-semibold background-gray-50"> 
+    <%= link_to "Edit this category", edit_category_path(@category), class: "bg-white px-3" %> 
   </div>
+  <div class="text-red-600 font-semibold background-gray-50">
+  <%= button_to "Destroy this category", @category, method: :delete, class: "bg-white px-1" %>
+  </div>
+ 
 <div>
+
