--- a/app/views/transactions/edit.html.erb
+++ b/app/views/transactions/edit.html.erb
@@ -1,4 +1,4 @@
-<h1>Editing transaction</h1>
+<h1 class="text-center p-4 font-semibold">Editing transaction</h1>
 <%= render "form", transaction: @transaction %>
 <br>
 <div>
