--- a/app/views/transactions/new.html.erb
+++ b/app/views/transactions/new.html.erb
@@ -1,9 +1,10 @@
 
-  <div>
+<div class="flex flex-col">
+  <div class="container mx-auto flex justify-start items-center bg-pink-800 text-white font-light px-3 py-4">
     <%= link_to categories_path do %>
-      Link to categories
+      <i class="fa-solid fa-arrow-left fa-xl "></i>
     <% end %>
-    <h5>NEW TRANSACTION</h5>
+    <h5 class="font-light grow text-center">NEW TRANSACTION</h5>
   </div>
-  <%= render "form", transaction: @transaction %>
+ <%= render "form", transaction: @transaction %>
 </div>
