--- a/app/views/transactions/show.html.erb
+++ b/app/views/transactions/show.html.erb
@@ -5,6 +5,6 @@
   <li><%= link_to "Back to categories", category_path(id: @transaction.category_id) %></li> |
   <li><%= link_to "Edit this transaction", edit_transaction_path(@transaction) %></li> |
   <li><%= link_to "Back to transactions", transactions_path %></li> |
-  <li><%= button_to "Destroy this transaction", @transaction, method: :delete %></li>
+  <li class="text-red-900"><%= button_to "Destroy this transaction", @transaction, method: :delete %></li>
   </ul>
 </div>
