--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,7 @@
   <body>
     <p class="notice"><%= notice %></p>
     <p class="alert"><%= alert %></p>
-    <main class="bg-purple-500 container mx-auto max-w-md">
+    <main class="bg-purple-500 container mx-auto max-w-md rounded-lg">
     <%= render partial: "layouts/navbar" %>
     <%= yield %>
     </main>
