--- a/app/views/transactions/index.html.erb
+++ b/app/views/transactions/index.html.erb
@@ -1,4 +1,16 @@
+<div class="row">
+
 <h1 class="text-center font-bold">List of All Transections</h1>
+
+  <div class="flex-row">
+     <%= form_tag transactions_url, method: :get do %>
+       <%= text_field_tag 'search[date_from]', @search.date_from, class: "m-1 p-1 w-1/3 rounded-md" %>
+       <%= text_field_tag 'search[date_to]', @search.date_to, class: "m-1 p-1 w-1/3 rounded-md" %>
+       <%= submit_tag 'Search', class: 'btn search-button', class: "bg-green-50 rounded-md p-1" %>
+     <% end %>
+  </div>
+</div>
+
   <% @transactions.each do |transaction| %>
     <%= render transaction %>
     <p class="font-bold text-yellow-300">
