--- a/app/views/transactions/index.html.erb
+++ b/app/views/transactions/index.html.erb
@@ -1,7 +1,5 @@
 <div class="row">
-
 <h1 class="text-center font-bold">List of All Transections</h1>
-
   <div class="flex-row">
      <%= form_tag transactions_url, method: :get do %>
        <%= text_field_tag 'search[date_from]', @search.date_from, class: "m-1 p-1 w-1/3 rounded-md" %>
@@ -10,6 +8,16 @@
      <% end %>
   </div>
 </div>
+
+  <div>
+    <% @total_amount = 0 %>
+    <% @transactions.each do |transaction| %>           
+        <% @total_amount += transaction.amount %>
+    <% end %>
+     <h5 class="m-3 p-3 bg-white text-terciary text-center text-2xl w-max">Total for all categories: $<%= @total_amount %></h5>
+  </div> 
+
+
 
   <% @transactions.each do |transaction| %>
     <%= render transaction %>
